# swanhart-tools

./: .gitignore  .gitmodules  LICENSE  PHP-SQL-Parser  README.md  WarpSQL.stub.php  manual.css  manual.html  mkphar.php
PHP-SQL-Parser/classes/: constants.php
async/: README.md  setup.sql
flexviews/: ABOUT  CHANGES  INSTALL  README.md  UPGRADE  VERSION  convert.php  install.sql  install_procs.inc  install_schema.inc  makefile  manual.html  test  upgrade.sql
flexviews/consumer/: PLUGIN_README.html  README  add_table.php  cleanup_history.php  cleanup_history_safe.sh  consumer.ini.example  consumer_safe.sh  drop_changelog.php  run_consumer.php  setup_flexcdc.php
flexviews/consumer_experimental/: CHANGES  consumer.ini.example  consumer_safe.sh  drop_changelog.php  run_consumer.php  setup_flexcdc.php
flexviews/docker/: Dockerfile  Makefile  README.md  docker-compose.yml  enable-mv.sql
flexviews/events/: apply.sql  compute.sql
flexviews/extra/: convert_to_php.php
flexviews/flexviews_demo/: INSTRUCTIONS  demo.sql  views.sql
flexviews/jobs/: README  build_mviews.php
flexviews/procs/: add_expr.sql  add_table.sql  asof.sql  copy.sql  create.sql  create_child_views.sql  create_mvlog.sql  delta.sql  disable.sql  drop.sql  drop_mvlog.sql  enable.sql  exists.sql  fv_raise.sql  fvrand.sql  get_from.sql  get_grouping_list.sql  get_id.sql  get_keys.sql  get_mvlog.sql  get_percentile.sql  get_select.sql  get_setting.sql  get_sql.sql  get_trigger_body.sql  get_where.sql  is_enabled.sql  mvlog_autoclean.sql  quote_name.sql  refresh.sql  refresh_all.sql  refresh_complete.sql  remove_expr.sql  remove_table.sql  rename.sql  set_definition.sql  show_warnings.sql  signal.sql  star_transform.sql  uow.sql  (+1 more)
flexviews/schema/: errors.csv  schema.sql
flexviews/test_sql/: test_flexviews.sql  test_flexviews_proc.sql
flexviews/wiki/: FlexCDC.wiki  Requirements.wiki  RoadMap.wiki  SupportedSQL.wiki
plugins/: README.md
plugins/gearmand/: CMakeLists.txt  common.h  server.cc
plugins/mpp/: .gitignore  bootstrap.ini.example
plugins/phpembed/: CMakeLists.txt
plugins/phpembed/src/: CMakeLists.txt  php_tok.h  php_tok_consts.h
shard-query/: INFOBRIGHT_README  INSTALL  README.md  Vagrantfile  bootstrap.ini.example  install_config_repo.php  point_at_config_repo.php  provision.sh  setup_virtual_schema.php  shard_query.sql
shard-query/RPM/: doophp-1.4.1-autoload.patch  gearman-mysql-udf.spec  shard-query.spec
shard-query/bundle/: README
shard-query/c/: Makefile  crc32.h  split.cpp  test2
shard-query/include/: PHP-SQL-Parser  S3.php  chunkit.php  common.php  custom_functions.php  instrumentation.php  paqu-join.php  salted-cache.php  shard-key-mapper.php  shard-loader.php  shard-query-config.php  shard-query.php
shard-query/proxy/: README
shard-query/testsuite/: t_1aggfunc
shard-query/tools/: README  rc.local.aws  vagrant_motd
shard-query/ui/: .htaccess  cli.php  index.php  set_password.php
sql-rewrite/: PHP-SQL-Parser  README.md  bundlerewrite.php  parallel.php  queries  rewriteengine.phar  rewriteengine.php  rewriter.php  test.php  test_phar.php  util.php
sql-rewrite/docs/: blank.html  classtrees_PHPSQLPARSER.html  classtrees_RewriteEngine.html  classtrees_default.html  classtrees_sql-rewrite.html  elementindex.html  elementindex_PHPSQLPARSER.html  elementindex_RewriteEngine.html  elementindex_default.html  elementindex_sql-rewrite.html  errors.html  index.html  li_PHPSQLPARSER.html  li_RewriteEngine.html  li_default.html  li_sql-rewrite.html  packages.html
sql-rewrite/parser/: PHPSQLParser.php  php-sql-parser.php
udf/: .gitignore  CREDITS  Makefile  README.txt  bcmath.c  install.sql  number.c
udf/bc-1.06/: Makefile  config.cache  (+1 more)
udf/parallel_query/: .gitignore  CMakeLists.txt
udf/parallel_query/cmake/: FindMySQL.cmake
udf/parallel_query/php/ext/mbstring/libmbfl/filters/: mbfilter_cp932.c
udf/parallel_query/php/ext/standard/: var_unserializer.c
udf/parallel_query/phpembed/: CMakeLists.txt
udf/parallel_query/phpembed/src/: CMakeLists.txt  php_arr.cpp  php_arr.h  php_cxx.cpp  php_cxx.h  php_stl.h
udf/parallel_query/scripts/: rewriteengine
udf/parallel_query/tmp/: php-cfgcmd.txt
udf/parallel_query/udf/: CMakeLists.txt  dotest  myphp.h  p  php.cpp  php.h  presto.cpp  presto.h  rewrite.cpp  test_php.cpp
utils/: README.md  digest_url.sql  pin_in_buffer_pool.sql  row_len_stats.sql  safe_slave_shutdown.sh  strings.sql
warpsql/: INSTALL  install_config_repo.php  shard_query.sql  sq_helper.sql  warpmpp.sql
warpsql-plugins/: CMakeLists.txt
warpsql-plugins/cmake/: FindPHP5.cmake
warpsql-plugins/gearmand/: CMakeLists.txt  README.md  client.c  client.sql  q.cc  server.h
warpsql-plugins/mpp/: provision.sh  setup_virtual_schema.php  shard_query.sql
warpsql-plugins/mpp/RPM/: doophp-1.4.1-autoload.patch
warpsql-plugins/mpp/include/: common.php  shard-query.php  testmore.php
warpsql-plugins/mpp/include/DAL/: simple-dal.php
warpsql-plugins/mpp/include/Net/Gearman/Job/: custom_function.php  worker_common.php
warpsql-plugins/mpp/include/PHP-SQL-Parser/src/utils/: PHPSQLParserConstants.php
warpsql-plugins/mpp/testsuite/r/: t_0basic.1396c5a108998aef3b635e20ee598019.result  t_1aggfunc.2ce35c4295809522f2bf3d3c261b3685.result  t_1aggfunc.4444a7bff5cba6152d23e76a3c44fabd.result  t_1aggfunc.4e28dffef539f01eca3d8c9597c2b031.result
warpsql-plugins/mpp/testsuite/winfunc/: test10.sql  test11.sql  test16.sql  test19.sql  test21.sql  test3.sql  test4.sql  test5.sql  test9.sql  test_table.sql
warpsql-plugins/mpp/tools/: vagrant_motd
warpsql-plugins/mpp/tools/ssb/: qgen.php  ssb_schema.sql  ssb_schema_noindex.sql
warpsql-plugins/phpembed/: CMakeLists.txt  COPYING  README  phpembedVersion.h.cmake
warpsql-plugins/phpembed/cmake/: FindPHP5.cmake
warpsql-plugins/phpembed/src/: CMakeLists.txt  php_cxx.cpp  php_cxx.h  php_stl.cpp  php_tok.cpp
warpsql-plugins/rewrite/: CMakeLists.txt  rewrite.hpp  rewrite_warpsql.cc
warpsql-plugins/udf/: CMakeLists.txt
warpsql-plugins/udf/warpsql_udf/: CMakeLists.txt  remote_exec.cpp  warpsql_udf.cpp  warpsql_udf.h
(+246 files in other folders)
